# variational-sparse-hpo

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE.txt  Makefile  README.md  pyproject.toml
docs/: RELEASE.md  experimental_strategy.md
expes_fb/: check_sc_vs_da.py
expes_fb/expe1_illustrative/: __init__.py  plot.py  plot_slide.py  run.py
expes_fb/expe2_feature_resolution/: data_gen.py  plot.py  run.py  run_parallel.py  table.py
expes_fb/expe3_oracle_ablation/: plot.py  run.py  run_parallel.py  table.py  table_ntrba.py
expes_fb/expe4_sota_comparison/: plot.py  plot_slide.py  run.py  run_parallel.py  table.py
expes_fb/expe5_scalability/: plot.py  run.py
expes_fb/expe6_real_world/: _run_s1_scalefree.py  audit_noharm.py  audit_terminal_certificate.py  checkpointing.py  config_s3.py  data_loaders.py  improve_sc_coupled.py  inner_helpers.py  plot_s1.py  plot_s2.py  plot_s2_convergence.py  plot_s2_gd.py  plot_s3.py  profile_oracle_cost.py  run_natural_biactive.py  run_s1.py  run_s2.py  run_s2_convergence.py  run_s2_gd.py  run_s3_counterfactual.py  run_sc_vs_null_trajectory.py  run_test.py  scan_biactivity.py  table_biactivity_diagnostic.py  table_common_clock.py  table_dataset_stats.py  table_s1.py  table_s2.py  table_s2_convergence.py  table_s2_gd.py  table_s2_scalefree.py  table_s3.py  verify_spurious_stationarity.py
expes_fb/expe7_certificate_soundness/: README.md  certificate_audit.py  plot.py  run.py  setting2_oracle_gap.py  smoothing_limit.py  synthetic.py  table.py
expes_fb/shared/: __init__.py  data_gen_degenerate.py  plotting.py
expes_fb/st_plot/: __init__.py  plot.py
scripts/: _ui.py  download_data.py  run_all.py  run_experiment.py
sparse_ho/: ho.py
sparse_ho/algo/: __init__.py  forward.py  implicit.py  implicit_variational.py
sparse_ho/criterion/: base.py  cross_val.py  held_out.py  multiclass_logreg.py  sure.py
sparse_ho/datasets/: utils_datasets.py
(+19 files in other folders)
