[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "variational-sparse-hpo"
version = "0.1.0"
description = "Companion code for 'A Variational Analysis Approach for Bilevel Hyperparameter Optimization with Sparse Regularization' (COAP)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Pedro Pérez-Aros" },
    { name = "Emilio Vilches" },
    { name = "David Villacís", email = "david@villacis.net" },
]
keywords = [
    "bilevel optimization",
    "hyperparameter optimization",
    "sparse regularization",
    "variational analysis",
    "forward-backward envelope",
    "coderivative",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "celer>=0.7.4",
    "numba>=0.64",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "seaborn>=0.13",
    "pandas>=2.0",
    "joblib>=1.3",
    "libsvmdata>=0.5",
    "hyperopt>=0.2.7",
    "download>=0.3.5",
]

[project.optional-dependencies]
# cvxpylayers-based reference oracle used only by a couple of correctness tests.
reference = ["torch", "cvxpy", "cvxpylayers"]

[project.urls]
Repository = "https://github.com/dvillacis/sparse-ho-fb"

[dependency-groups]
dev = ["ruff>=0.15", "pytest>=8", "pytest-cov>=5"]

# The importable package is `sparse_ho` (the vendored, forked core library).
[tool.hatch.build.targets.wheel]
packages = ["sparse_ho"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["sparse_ho/tests"]

[tool.ruff]
line-length = 88
# Experiment scripts and vendored library follow upstream style; lint new code only.
extend-exclude = ["expes_fb", "docs"]
